# greetings

./: readme.md  setup.cfg  setup.py
greetings/: __main__.py
