[metadata]
name = greetings
version = 1.0.0
license = MIT
author = Yoann Dupont
author_email = yoa.dupont@gmail.com
description = greetings from command line
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/YoannDupont/greetings
project_urls =
    Bug Tracker = https://github.com/YoannDupont/greetings/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    toy project

[options]
packages =
    greetings
python_requires = >=3.6

[options.entry_points]
console_scripts =
    greet = greetings.__main__:main
